Including Advanced User Search API client 8ac0n: test resolves OKTA-78337
OKTA-78337
<<<Jenkins Check-In of Tested SHA: b8bc35f83c83837fe4ce354c674ed1d427e4365f for lars.johansen@okta.com>>> 
Artifact: SDK.Java

--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,7 @@ hs_err_pid*
 .idea/uiDesigner.xml
 
 # Maven:
-target/maven-archiver
-target/surefire-reports
+target
 
 # Gradle:
 .idea/gradle.xml
