--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
         <slf4j-api.version>1.7.10</slf4j-api.version>
         <testng.version>6.8.17</testng.version>
+        <org.hamcrest.version>1.3</org.hamcrest.version>
     </properties>
     <dependencies>
         <dependency>
@@ -55,6 +56,12 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>${org.hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
