--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+build2
+node_modules
+dist
+npm-debug.log
+travis_phantomjs
+.DS_Store
+.vscode
