:arrow_up: @okta/generator-samples@1.11.0

--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "poststart:mock-okta": "wait-on tcp:3000",
     "stop:mock-okta": "forever stop ./tools/mock-okta/index.js",
     "check:mock-okta": "node ./tools/mock-okta/check.js",
-    "test:mock-okta": "mocha tools/mock-okta/test/suites/**/*.js",
+    "test:mock-okta": "mocha --timeout 15000 tools/mock-okta/test/suites/**/*.js",
     "reset-test-env": "node ./tools/mock-okta/test/prep.js && rimraf ./tools/mock-okta/tapes/*.js",
     "prerecord-new-tapes": "npm run reset-test-env && npm run start:mock-okta -- --record",
     "record-new-tapes": "npm run test:mock-okta || exit 0;",
     "postrecord-new-tapes": "npm run stop:mock-okta",
     "pretest": "npm run start:mock-okta",
     "test": "mvn test",
-    "posttest": "npm run check:mock-okta"
+    "posttest": "npm run check:mock-okta",
+    "prereset-test-env": "node ./tools/mock-okta/test/clean.js"
   },
   "devDependencies": {
     "cli-table2": "0.2.0",
