add Travis setup script

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: java
 jdk:
 - oraclejdk8
 before_install:
-- export PROJECT_VERSION=$(mvn -q -Dexec.executable="echo" -Dexec.args='${project.version}' --non-recursive exec:exec)
+- source ./ci/before_install.sh
 script:
 -  mvn install
