--- a/api/pom.xml
+++ b/api/pom.xml
@@ -35,12 +35,10 @@
         <dependency>
             <groupId>com.okta.sdk</groupId>
             <artifactId>okta-sdk-base-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.okta.sdk</groupId>
             <artifactId>okta-sdk-base-impl</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -84,7 +82,7 @@
                 <dependencies>
                     <dependency>
                         <groupId>com.okta.sdk</groupId>
-                        <artifactId>swagger-templates</artifactId>
+                        <artifactId>okta-api-swagger-templates</artifactId>
                         <version>1.0.0-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
