First pass at adding a non-web Quick Start

--- a/base-impl/src/main/resources/com/okta/sdk/config/okta.properties
+++ b/base-impl/src/main/resources/com/okta/sdk/config/okta.properties
@@ -22,7 +22,7 @@ okta.client.cacheManager.defaultTtl: 300
 okta.client.cacheManager.defaultTti: 300
 okta.client.baseUrl: https://api.okta.com/v1
 okta.client.connectionTimeout: 30
-okta.client.authenticationScheme: SAUTHC1
+okta.client.authenticationScheme: SSWS
 okta.client.proxy.port:
 okta.client.proxy.host:
 okta.client.proxy.username:
