fix license headers

--- a/impl/src/main/resources/com/okta/sdk/config/okta.properties
+++ b/impl/src/main/resources/com/okta/sdk/config/okta.properties
@@ -20,7 +20,7 @@ okta.client.apiKey.secret:
 okta.client.cacheManager.enabled: true
 okta.client.cacheManager.defaultTtl: 300
 okta.client.cacheManager.defaultTti: 300
-okta.client.baseUrl: https://your-subdomain.okta.com
+okta.client.baseUrl: https://dev-259824.oktapreview.com
 okta.client.connectionTimeout: 30
 okta.client.authenticationScheme: SSWS
 okta.client.proxy.port:
