Replaced EasyMock and PowerMock with Mockito and a couple TestNG listeners

--- a/httpclient/pom.xml
+++ b/httpclient/pom.xml
@@ -61,8 +61,8 @@
 
         <!-- Test deps -->
         <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymock</artifactId>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
