--- a/pom.xml
+++ b/pom.xml
@@ -184,9 +184,9 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.easymock</groupId>
-                <artifactId>easymock</artifactId>
-                <version>3.4</version>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>2.7.22</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
