Removed dead code jwt, and Basic auth (not used by this SDK)

--- a/impl/src/test/resources/okta.properties
+++ b/impl/src/test/resources/okta.properties
@@ -22,7 +22,7 @@ okta.client.cacheManager.defaultTtl: 10000
 okta.client.cacheManager.defaultTti: 10000
 okta.client.baseUrl: https://api.okta.com/v42
 okta.client.connectionTimeout: 10
-okta.client.authenticationScheme: BASIC
+okta.client.authenticationScheme: SSWS
 okta.client.proxy.port: 9000
 okta.client.proxy.host: localhost
 okta.client.proxy.username: foo
