First pass at removing ApiKey, and using ClientCredentials/Resolver instead

--- a/impl/src/main/resources/com/okta/sdk/config/okta.properties
+++ b/impl/src/main/resources/com/okta/sdk/config/okta.properties
@@ -14,9 +14,9 @@
 # limitations under the License.
 #
 
-okta.client.apiKey.file:
-okta.client.apiKey.id:
-okta.client.apiKey.secret:
+okta.client.clientCredentials.file:
+okta.client.clientCredentials.id:
+okta.client.clientCredentials.secret:
 okta.client.cacheManager.enabled: true
 okta.client.cacheManager.defaultTtl: 300
 okta.client.cacheManager.defaultTti: 300
