Rename .secret properties to .token

--- a/impl/src/test/resources/okta.properties
+++ b/impl/src/test/resources/okta.properties
@@ -14,9 +14,7 @@
 # limitations under the License.
 #
 
-okta.client.apiKey.file: classpath:key.txt
-okta.client.apiKey.id: 12
-okta.client.apiKey.secret: 13
+okta.client.apiKey.token: 13
 okta.client.cacheManager.enabled: true
 okta.client.cacheManager.defaultTtl: 10000
 okta.client.cacheManager.defaultTti: 10000
