renamed properties from okta.client.* to okta.apiClient.*
This is the standard across Okta SDKs

--- a/impl/src/test/resources/okta.properties
+++ b/impl/src/test/resources/okta.properties
@@ -14,14 +14,14 @@
 # limitations under the License.
 #
 
-okta.client.apiKey.token: 13
-okta.client.cacheManager.enabled: true
-okta.client.cacheManager.defaultTtl: 10000
-okta.client.cacheManager.defaultTti: 10000
-okta.client.baseUrl: https://api.okta.com/v42
-okta.client.connectionTimeout: 10
-okta.client.authenticationScheme: SSWS
-okta.client.proxy.port: 9000
-okta.client.proxy.host: localhost
-okta.client.proxy.username: foo
-okta.client.proxy.password: bar
+okta.apiClient.token: 13
+okta.apiClient.cacheManager.enabled: true
+okta.apiClient.cacheManager.defaultTtl: 10000
+okta.apiClient.cacheManager.defaultTti: 10000
+okta.apiClient.baseUrl: https://api.okta.com/v42
+okta.apiClient.connectionTimeout: 10
+okta.apiClient.authenticationScheme: SSWS
+okta.apiClient.proxy.port: 9000
+okta.apiClient.proxy.host: localhost
+okta.apiClient.proxy.username: foo
+okta.apiClient.proxy.password: bar
