Removed JSON support and changed properties to yaml
Okta SDK will use YAML as the default config format

--- a/impl/src/test/resources/okta.yaml
+++ b/impl/src/test/resources/okta.yaml
@@ -16,6 +16,12 @@
 
 okta:
   apiClient:
+    token: 13
+    baseUrl: https://api.okta.com/v42
+    connectionTimeout: 10
     proxy:
       host: "proxyyaml"
+      port: 9009
       username: "fooyaml"
+      password: bar
+    authenticationScheme: SSWS
