Added support for x-oktaDynamicSchema flag
AbstractResource now extends Map, so we just need to add the Map interface to the resource when the x-oktaDynamicSchema is set

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -9018,7 +9018,8 @@
           "type": "string"
         }
       },
-      "type": "object"
+      "type": "object",
+      "x-oktaDynamicSchema": "true"
     },
     "UserStatusMediationPolicyRuleCondition": {
       "properties": {
